Haven't really done much but I am trying
This is just proof that I am doing something. What is that something? Who knows.

I might stop adding the script snippets here because I'm trying to write everything in an actual script-writing word processor but obviously that's less important than the actual compiler.
________________________

ODO narrows his eyes at GARIBALDI before backing away from the cell and tapping his com-badge.

ODO

ODO to SISKO

SISKO

over his communicator

Sisko here. What is it, Odo?

odo

Could you meet me in my office sir? There's been a situation on the Promenade.

INT. Ops

DAX and KIRA walk back into operations and see SISKO leaning over the console they had been working at earlier.

SISKO

At best?

The two women look at each other and quickly duck behind a piece of machinery as another copy of SISKO, DAX, and KIRA carry out the conversation they had had with SISKO earlier that day.

kira

At worst, it's already started, but not on a broad enough scale for us to have noticed the impacts.

SISKO looks between the two women for a long moment and sighs.

SISKO

Thank you Major, Lieutenant.

He turns.

Odo, I need you to keep a close eye on our Gamma Quadrant friends, particularly that ambassador. I have a bad feeling that they'll be around for longer than any of us want them to be.

The conversation is slightly muted as the women crawl to get a better look at the rest of the room. No one else seems bothered by the repeated exchange.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ source/scripts/parser.js
 source/scripts/tree.js
 source/scripts/utils.js
 source/scripts/semanticAnalzyer.js
+source/scripts/.idea/misc.xml
